#include "Classe.h"
class Orc : public Personagem, public Classe{

    public:
    virtual void usarHabilidade() override;
};
